--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -41,6 +41,10 @@
         <item name="android:windowExitAnimation">@anim/slide_out_buttom</item>
     </style>
 
+    <style name="Map_style">
+        <item name="android:drawable">@raw/map_style_dark</item>
+    </style>
+
 
 </resources>
 
