--- a/app/src/main/res/layout/activity_data_register_personaldata.xml
+++ b/app/src/main/res/layout/activity_data_register_personaldata.xml
@@ -73,6 +73,7 @@
                                     android:id="@+id/InputFirstName_activityData_register_personaldata"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:maxLength="20"
                                     android:textSize="@dimen/text_size_input" />
                             </com.google.android.material.textfield.TextInputLayout>
 
@@ -92,6 +93,7 @@
                                     android:id="@+id/InputLastName_activityData_register_personaldata"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:maxLength="20"
                                     android:textSize="@dimen/text_size_input" />
                             </com.google.android.material.textfield.TextInputLayout>
 
@@ -111,8 +113,9 @@
                                     android:id="@+id/InputAge_activityData_register_personaldata"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:textSize="@dimen/text_size_input"
-                                    android:inputType="numberDecimal" />
+                                    android:inputType="numberDecimal"
+                                    android:maxLength="3"
+                                    android:textSize="@dimen/text_size_input" />
                             </com.google.android.material.textfield.TextInputLayout>
                         </LinearLayout>
 
