--- a/app/src/main/res/layout/activity_qa_main_menu.xml
+++ b/app/src/main/res/layout/activity_qa_main_menu.xml
@@ -25,7 +25,6 @@
             android:background="@drawable/style_toolbar"
             android:orientation="horizontal">
 
-
             <TextView
                 android:id="@+id/FullNameUser_TextView_activityQaMainMenu"
                 android:layout_width="match_parent"
@@ -55,9 +54,6 @@
                     app:tint="@color/textColor_WithoutBg"/>
             </RelativeLayout>
 
-
-
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -82,7 +78,7 @@
 
                 <RelativeLayout
                     android:id="@+id/buttomPanika_RelativeLayout_ActivityQaMainMenu"
-                    android:layout_width="350dp"
+                    android:layout_width="match_parent"
                     android:layout_height="350dp"
                     android:layout_gravity="center"
                     android:clickable="true"
@@ -128,8 +124,6 @@
                     android:padding="10dp"
                     android:layout_weight="1"
                     android:orientation="vertical">
-
-
 
                     <RelativeLayout
                         android:layout_width="match_parent"
